--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     height: 100vh;
     background: linear-gradient(#1c1917 50%, #43ac6a 50%);
 }
 
-.container{
+.container {
     font-size: 16px;
     width: 90vw;
     max-width: 37.5em;
@@ -26,58 +26,64 @@ body{
     box-shadow: 1.2em 2em 3em rgba(0, 0, 0, 0.2);
 }
 
-.search-container{
+.search-container {
     display: grid;
     grid-template-columns: 9fr 3fr;
     gap: 1.2em;
 }
 
-.search-container input, .search-container button{
+.search-container input,
+.search-container button {
     font-size: 0.9em;
     outline: none;
     border-radius: 0.3em;
 }
 
-.search-container input{
+.search-container input {
     background-color: transparent;
     border: 1px solid #a0a0a0;
-    color: #fff;
+    color: #ffffff;
     padding: 0.7em;
 }
 
-.search-container input:focus{
-    border-color: #fff;
+.search-container input:focus {
+    border-color: #ffffff;
 }
 
-.search-container button{
+.search-container button {
     background-color: #43ac6a;
     border: none;
     cursor: pointer;
+    color: #ffffff;
 }
 
-#result{
-    color: #fff;
+.search-container button:hover {
+    background-color: #338551;
 }
 
-.info{
+#result {
+    color: #ffffff;
+}
+
+.info {
     position: relative;
     display: grid;
     grid-template-columns: 4fr 8fr;
     margin-top: 1.2em;
 }
 
-.poster{
+.poster {
     width: 100%;
 }
 
-h2{
+h2 {
     text-align: center;
     font-size: 1.5em;
     font-weight: 600;
     letter-spacing: 0.06em;
 }
 
-.rating{
+.rating {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,17 +91,17 @@ h2{
     margin: 0.6em 0 0.9em 0;
 }
 
-.rating img{
+.rating img {
     width: 1.2em;
 }
 
-.rating h4{
+.rating h4 {
     display: inline-block;
     font-size: 1.1em;
     font-weight: 500;
 }
 
-.details{
+.details {
     display: flex;
     font-size: 0.95em;
     gap: 1em;
@@ -105,12 +111,12 @@ h2{
     font-weight: 300;
 }
 
-.genre{
+.genre {
     display: flex;
     justify-content: space-around;
 }
 
-.genre div{
+.genre div {
     border: 1px solid #a0a0a0;
     font-size: 0.75em;
     padding: 0.4em 1.6em;
@@ -118,12 +124,12 @@ h2{
     font-weight: 300;
 }
 
-h3{
+h3 {
     font-weight: 500;
-    margin-top: 1.2em;
+    margin-top: .2em;
 }
 
-p{
+p {
     font-size: 0.9em;
     font-weight: 300;
     line-height: 1.8em;
@@ -131,22 +137,33 @@ p{
     color: #a0a0a0;
 }
 
-.msg{
+.msg {
     text-align: center;
 }
 
-@media screen and (max-width: 600px) {
-    .container{
+@media screen and (max-width: 576px) {
+    .container {
         font-size: 14px;
     }
-    .poster{
+
+    .poster {
         margin: auto;
         width: auto;
         max-height: 10.8em;
     }
 
-    .info{
+    .info {
         grid-template-columns: 1fr;
+    }
+
+    .search-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0.5em;
+    }
+
+    .search-container button {
+        padding: 10px;
     }
 
 }
